# moneyclip

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lints.yaml  lints.yml  test-macos.yml  test-ubuntu.yml  test-windows.yml
src/: cli.rs  db.rs  lib.rs  main.rs  models.rs  utils.rs
src/commands/: accounts.rs  budgets.rs  categories.rs  doctor.rs  envelopes.rs  exporter.rs  fx.rs  importer.rs  mod.rs  portfolio.rs  reports.rs  rules.rs  transactions.rs
tests/: budget_tests.rs  envelope_tests.rs  exporter_tests.rs  fx_tests.rs  importer_tests.rs  rules_tests.rs  transactions_tests.rs
