[package]
name = "moneyclip"
version = "0.1.0"
edition = "2021"
authors = ["Soumyadip Sarkar <soumyadip@soumyadipsarkar.com>"]
description = "Moneyclip: multi-currency personal finance, envelope budgeting, and portfolio CLI"
license = "Apache-2.0"
repository = "https://github.com/neuralsorcerer/moneyclip"
keywords = ["finance", "budget", "envelope", "portfolio", "cli", "fx", "multicurrency"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
comfy-table = "7"
csv = "1"
directories = "5"
once_cell = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
